<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, StudiumhelferActivity!</string>
    <string name="app_name">Modul-Guide</string>
    
        
        <string name="passed">Bestanden</string>
            <string name="sign_in">Anmelden</string>
                <string name="failed">Durchgefallen</string>
                    <string name="edit">Bearbeiten</string>
                        <string name="details">Details</string>
                        
       <string name="add_course">Kurs hinzufügen</string>
                            
      <string name="delete">Löschen</string>
      
       <string name="course_offers">Kursvorschläge</string>
       
           
           
           
       
       <!-- Strings zum Kurs hinzufügen -->
       
       <string name="add_course_name">Name*:</string>
       <string name="add_course_vak">VAK:</string>
       <string name="add_course_cp">CP*:</string>
       <string name="add_course_accept">Eintragen</string>
       <string name="add_course_cancel">Abbrechen</string>
       <string name="add_course_grade">Note:</string>
       <string name="add_course_grade_none">(Noch) keine</string>
       <string-array name="add_course_grades">
            <item>(Noch) keine</item>
        	<item>1.0</item>
        	<item>1.3</item>
        	<item>1.7</item>
        	<item>2.0</item>
        	<item>2.3</item>
        	<item>2.7</item>
        	<item>3.0</item>
        	<item>3.3</item>
        	<item>3.7</item>
        	<item>4.0</item>
    	</string-array>
    	<string name="add_course_passed">Bestanden</string>
       
          
                                                        
                        

</resources>